--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
   <head>
-    <title>Brain Droppings by Déja Augustine</title>
+    <title>Déja Augustine</title>
   </head>
 
   <body>
-    <h1>Brain Droppings <small>by Déja Augustine</small></h1>
     <p>Coming soon...</p>
   </body>
 </html>
